force-app/main/default/objects/Team_Membership__c/Team_Membership__c.object-meta.xml
<CustomObject>
    <description>Historical record of player-team relationships including transfers and loans</description>
    <label>Team Membership</label>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Membership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>