force-app/main/default/objects/Team_Membership__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Leave date (null if current)</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>