force-app/main/default/objects/Team_Membership__c/fields/Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Current__c</fullName>
    <description>Auto-checked if End_Date__c is null</description>
    <formula>ISBLANK(End_Date__c)</formula>
    <label>Is Current</label>
    <type>Checkbox</type>
</CustomField>