force-app/main/default/objects/Team_Membership__c/fields/Loan_Fee__c.field-meta.xml
<CustomField>
    <fullName>Loan_Fee__c</fullName>
    <description>Loan fee if applicable</description>
    <label>Loan Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>