force-app/main/default/objects/Team_Membership__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <description>Player in this membership</description>
    <label>Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Memberships</relationshipLabel>
    <relationshipName>Team_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>