force-app/main/default/objects/Team_Membership__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Primary position at this club</description>
    <label>Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>