force-app/main/default/objects/Team_Membership__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Season for this team membership</description>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Team Memberships</relationshipLabel>
    <relationshipName>Team_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>