force-app/main/default/objects/Team_Membership__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team in this membership</description>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Team Memberships</relationshipLabel>
    <relationshipName>Team_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>