force-app/main/default/objects/Team_Membership__c/fields/Transfer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Fee__c</fullName>
    <description>Transfer fee paid</description>
    <label>Transfer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>